--- a/app/src/main/res/layout/activity_dodaj_wpis.xml
+++ b/app/src/main/res/layout/activity_dodaj_wpis.xml
@@ -31,6 +31,7 @@
         android:layout_marginTop="85dp"
         android:layout_marginEnd="162dp"
         android:layout_marginBottom="379dp"
+        android:onClick="wyslij"
         android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
